Finished the rest

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>A Spaceman came traveling, in a ship from afar.</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/modules.css" rel="stylesheet">
   <link href="css/grid.css" rel="stylesheet">
   <link href="css/type.css" rel="stylesheet">
@@ -10,13 +11,15 @@
   <link href="https://fonts.googleapis.com/css?family=Ubuntu+Condensed&display=swap" rel="stylesheet">
 </head>
 <body>
-  <section>
-    <h1 class="tena">Explore the universe</h1>
-    <h2 class="kilo">Blast off into the endless wonder of the ever expanding universe.</h2>
-    <div class="">
-      <a href="#" class="btn-ghost">
-        <p>Launch Now</p>
-      </a>
+  <section class="h-w-1 text-center">
+    <div class="content pad-t-1-2">
+      <h1 class="tenakilo push-0 pad-b-1-4">Explore the universe</h1>
+      <h2 class="mega italic pad-b">Blast off into the endless wonder of the ever expanding universe.</h2>
+      <div>
+        <a href="#" class="btn-ghost btn">
+          <p class="push-0 giga ">Launch Now<img class="icon i-32" src="images/rocket.svg" alt=""></p>
+        </a>
+      </div>
     </div>
   </section>
 </body>
